objects/SU_Search_Entity__mdt/SU_Search_Entity__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Object will be used for Search Utility LWC Component , which is a reusable asset for search. Use this object to define the search component paramaters/placeholders with their properties like Name,API Name etc to generate a where statement to be utilized further for Dynamic queries.</description>
    <label>Search Entity</label>
    <pluralLabel>Search Entities</pluralLabel>
</CustomObject>