objects/SU_Search_Entity__mdt/fields/SU_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>SU_Api_Name__c</fullName>
    <description>API Name of the Field</description>
    <inlineHelpText>API Name of the Field</inlineHelpText>
    <label>Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>