objects/SU_Search_Entity__mdt/fields/SU_Feature__c.field-meta.xml
<CustomField>
    <fullName>SU_Feature__c</fullName>
    <description>Feature in which this property will be used</description>
    <inlineHelpText>Feature in which this property will be used</inlineHelpText>
    <label>Feature</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Re-Org Search</fullName>
                <default>true</default>
                <label>Re-Org Search</label>
            </value>
            <value>
                <fullName>Transfer-In Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>