objects/SU_Search_Entity__mdt/fields/SU_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>SU_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active if checked</description>
    <inlineHelpText>Active if checked</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>