objects/SU_Search_Entity__mdt/fields/SU_Label__c.field-meta.xml
<CustomField>
    <fullName>SU_Label__c</fullName>
    <description>Label of Search placeholder</description>
    <inlineHelpText>Label of Search placeholder</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>