objects/SU_Search_Entity__mdt/fields/SU_Operator__c.field-meta.xml
<CustomField>
    <fullName>SU_Operator__c</fullName>
    <description>Placeholder operator</description>
    <inlineHelpText>Choose the operator using which search parameter will be defined</inlineHelpText>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EQUALS</fullName>
                <default>true</default>
                <label>EQUALS</label>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>