objects/SU_Search_Entity__mdt/fields/SU_Options__c.field-meta.xml
<CustomField>
    <fullName>SU_Options__c</fullName>
    <description>Dropdown Options</description>
    <inlineHelpText>Dropdown Options. Populate only if Type is picklist/dropdown. (separate values using &apos;;&apos; as a separator)</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>