objects/SU_Search_Entity__mdt/fields/SU_Order__c.field-meta.xml
<CustomField>
    <fullName>SU_Order__c</fullName>
    <description>Order</description>
    <inlineHelpText>Order (Number For E.g : 1) : To define the order of placeholders on UI</inlineHelpText>
    <label>Order</label>
    <length>2</length>
    <type>Text</type>
</CustomField>