objects/SU_Search_Entity__mdt/fields/SU_Required__c.field-meta.xml
<CustomField>
    <fullName>SU_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for required placeholder</description>
    <inlineHelpText>Check if Placeholder is required on screen</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>