objects/SU_Search_Entity__mdt/fields/SU_Type__c.field-meta.xml
<CustomField>
    <fullName>SU_Type__c</fullName>
    <description>Placeholder Type in which it will be visible on UI</description>
    <inlineHelpText>Placeholder Type</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>